--- a/index.css
+++ b/index.css
@@ -173,3 +173,16 @@ body{
         box-shadow: 0px 0px 25px  var(--Light-slate-blue);
     }
 }
+
+
+@media screen and (min-width:1440px) {
+    .shadow{
+        display: flex;
+        justify-content: space-between;
+        margin: auto;
+        height: 30vh;
+        border-radius: 30px;
+        align-items: center;
+        box-shadow: 0px 0px 25px  var(--Light-slate-blue);
+    }
+}
